[tool.taskipy.tasks]
run = "streamlit run analise-vendas.py"

[tool.poetry]
name = "dashboard-analise-vendas-streamlit"
version = "0.1.0"
description = ""
authors = ["Breno Mendes <b.mendesbernardo2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
duckdb = "^0.10.1"
streamlit = "^1.33.0"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
